# sierpinski-triangle

./: Cargo.toml
.github/: README.md
src/: main.rs
