[package]
name = "sierpinski-triangle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
rand = "0.8.5"
rayon = "1.8.0"
async-std = "1.12.0"
indicatif = "0.17.6"
clap = { version = "4.4.18", features = ["derive"] }
chrono = "0.4.38"
console = "0.15.8"
